include/slang/c/slang.h


typedef enum slang_status {
    SLANG_WARN_TRUNCATED = -2,
    SLANG_WARN_PARTIAL = -1,
    SLANG_OK = 0,
    SLANG_ERR_IO = 1,
    SLANG_ERR_INVALID_ARG = 2,
    SLANG_ERR_INVALID_STATE = 3,
    SLANG_ERR_PARSE_RECURSION = 4,
    SLANG_ERR_REWRITE = 5,
    SLANG_ERR_OUT_OF_MEMORY = 6,
    SLANG_ERR_UNSUPPORTED = 7,
    SLANG_ERR_ABI_MISMATCH = 8,
    SLANG_ERR_CANCELLED = 9,
    SLANG_ERR_INTERNAL = 100,
} slang_status;
typedef struct slang_error {
    slang_status status;
    char message[248];
} slang_error;
SLANG_C_API const char* slang_status_name(slang_status status);
SLANG_C_API uint32_t slang_c_version(void);
SLANG_C_API const char* slang_version_string(void);
SLANG_C_API const char* slang_syntax_model_hash(void);
SLANG_C_API const char* slang_diagnostics_model_hash(void);
SLANG_C_API uint32_t slang_build_flags(void);
typedef struct slang_str {
    const char* data;
    size_t len;
    void* owner;
} slang_str;
SLANG_C_API void slang_str_free(slang_str str);
typedef uint32_t slang_buffer_id;
typedef struct slang_loc {
    slang_buffer_id buffer;
    uint32_t reserved_;
    uint64_t offset;
} slang_loc;
typedef struct slang_range {
    slang_loc start;
    slang_loc end;
} slang_range;
typedef struct slang_source_manager_t* slang_source_manager;
typedef struct slang_syntax_tree_t* slang_syntax_tree;
typedef struct slang_compilation_t* slang_compilation;
typedef struct slang_diagnostics_t* slang_diagnostics;
typedef struct slang_options_t* slang_options;
typedef struct slang_node {
    const void* ptr;
    slang_syntax_tree tree;
    uint32_t kind;
    uint32_t reserved_;
} slang_node;
typedef enum slang_ast_domain {
    SLANG_AST_SYMBOL = 0,
    SLANG_AST_EXPRESSION = 1,
    SLANG_AST_STATEMENT = 2,
    SLANG_AST_TIMING_CONTROL = 3,
    SLANG_AST_CONSTRAINT = 4,
    SLANG_AST_ASSERTION_EXPR = 5,
    SLANG_AST_BINS_SELECT_EXPR = 6,
    SLANG_AST_PATTERN = 7,
} slang_ast_domain;
typedef struct slang_ast {
    const void* ptr;
    slang_compilation compilation;
    uint32_t kind;
    uint32_t domain;
} slang_ast;
SLANG_C_API uint32_t slang_syntax_kind_count(void);
SLANG_C_API slang_str slang_syntax_kind_name(uint32_t kind);
SLANG_C_API uint32_t slang_syntax_kind_struct(uint32_t kind);
SLANG_C_API uint32_t slang_syntax_struct_count(void);
SLANG_C_API slang_str slang_syntax_struct_name(uint32_t syntax_struct);
SLANG_C_API uint32_t slang_syntax_struct_member_count(uint32_t syntax_struct);
typedef enum slang_member_form {
    SLANG_MEMBER_TOKEN = 0,
    SLANG_MEMBER_NODE = 1,
    SLANG_MEMBER_OPTIONAL_NODE = 2,
    SLANG_MEMBER_LIST = 3,
    SLANG_MEMBER_SEPARATED_LIST = 4,
    SLANG_MEMBER_TOKEN_LIST = 5,
} slang_member_form;
SLANG_C_API slang_str slang_syntax_member_name(uint32_t syntax_struct, uint32_t member);
SLANG_C_API slang_member_form slang_syntax_member_form(uint32_t syntax_struct, uint32_t member);
SLANG_C_API uint32_t slang_token_kind_count(void);
SLANG_C_API slang_str slang_token_kind_name(uint32_t kind);
SLANG_C_API slang_str slang_ast_kind_name(slang_ast_domain domain, uint32_t kind);
SLANG_C_API uint32_t slang_ast_kind_count(slang_ast_domain domain);
SLANG_C_API slang_source_manager slang_source_manager_create(slang_error* err);
SLANG_C_API void slang_source_manager_destroy(slang_source_manager sm);
SLANG_C_API void slang_source_manager_add_include_dir(slang_source_manager sm, const char* pattern,
                                                      size_t pattern_len, bool system,
                                                      slang_error* err);
SLANG_C_API slang_buffer_id slang_source_manager_assign_text(slang_source_manager sm,
                                                             const char* path, size_t path_len,
                                                             const char* text, size_t text_len,
                                                             slang_error* err);
SLANG_C_API slang_buffer_id slang_source_manager_read_file(slang_source_manager sm,
                                                           const char* path, size_t path_len,
                                                           slang_error* err);
SLANG_C_API slang_str slang_source_manager_file_name(slang_source_manager sm, slang_loc loc);
SLANG_C_API slang_str slang_source_manager_text(slang_source_manager sm, slang_buffer_id buffer);
SLANG_C_API size_t slang_source_manager_line(slang_source_manager sm, slang_loc loc);
SLANG_C_API size_t slang_source_manager_column(slang_source_manager sm, slang_loc loc);
SLANG_C_API bool slang_source_manager_is_macro_loc(slang_source_manager sm, slang_loc loc);
SLANG_C_API slang_loc slang_source_manager_original_loc(slang_source_manager sm, slang_loc loc);
SLANG_C_API slang_options slang_options_create(slang_error* err);
SLANG_C_API void slang_options_destroy(slang_options options);
typedef enum slang_language_version {
    SLANG_LANGUAGE_1364_2005 = 0,
    SLANG_LANGUAGE_1800_2017 = 1,
    SLANG_LANGUAGE_1800_2023 = 2,
} slang_language_version;
SLANG_C_API void slang_options_set_language_version(slang_options options,
                                                    slang_language_version version);
SLANG_C_API void slang_options_define(slang_options options, const char* name, size_t name_len,
                                      const char* value, size_t value_len, slang_error* err);
SLANG_C_API void slang_options_add_top_module(slang_options options, const char* name,
                                              size_t name_len, slang_error* err);
SLANG_C_API void slang_options_set_compilation_flags(slang_options options, uint32_t flags);
SLANG_C_API slang_syntax_tree slang_syntax_tree_from_text(
    slang_source_manager sm, const char* text, size_t text_len, const char* name, size_t name_len,
    const char* path, size_t path_len, slang_options options , slang_error* err);
SLANG_C_API slang_syntax_tree slang_syntax_tree_from_file(slang_source_manager sm, const char* path,
                                                          size_t path_len,
                                                          slang_options options ,
                                                          slang_error* err);
SLANG_C_API slang_syntax_tree slang_syntax_tree_from_buffer(slang_source_manager sm,
                                                            slang_buffer_id buffer,
                                                            slang_options options ,
                                                            slang_error* err);
SLANG_C_API slang_syntax_tree slang_syntax_tree_retain(slang_syntax_tree tree);
SLANG_C_API void slang_syntax_tree_release(slang_syntax_tree tree);
SLANG_C_API slang_node slang_syntax_tree_root(slang_syntax_tree tree);
SLANG_C_API slang_diagnostics slang_syntax_tree_diagnostics(slang_syntax_tree tree,
                                                            slang_error* err);
SLANG_C_API slang_source_manager slang_syntax_tree_source_manager(slang_syntax_tree tree);
SLANG_C_API slang_str slang_syntax_tree_to_string(slang_syntax_tree tree, slang_error* err);
SLANG_C_API uint32_t slang_trivia_kind_count(void);
SLANG_C_API slang_str slang_trivia_kind_name(uint32_t kind);
typedef enum slang_visit {
    SLANG_VISIT_BREAK = 0,
    SLANG_VISIT_CONTINUE = 1,
    SLANG_VISIT_SKIP = 2,
} slang_visit;
typedef struct slang_syntax_sink {
    void (*start_node)(void* user, uint32_t kind, uint32_t syntax_struct);
    void (*trivia)(void* user, uint32_t kind, const char* text, size_t len);
    void (*token)(void* user, uint32_t kind, const char* text, size_t len, slang_loc loc,
                  uint16_t flags);
    void (*absent)(void* user);
    void (*start_list)(void* user, slang_member_form form);
    void (*finish_list)(void* user);
    void (*finish_node)(void* user);
} slang_syntax_sink;
typedef enum slang_severity {
    SLANG_SEVERITY_IGNORED = 0,
    SLANG_SEVERITY_NOTE = 1,
    SLANG_SEVERITY_WARNING = 2,
    SLANG_SEVERITY_ERROR = 3,
    SLANG_SEVERITY_FATAL = 4,
} slang_severity;
typedef struct slang_diag {
    uint32_t code;
    slang_severity severity;
    slang_loc location;
    uint32_t note_count;
    uint32_t range_count;
} slang_diag;
typedef struct slang_render_options {
    bool colors;
    bool show_source;
    bool show_include_stack;
    bool absolute_paths;
} slang_render_options;
typedef enum slang_freeze_flag {
    SLANG_FREEZE_ELABORATE_ALL = 1u << 0,
    SLANG_FREEZE_PREFOLD = 1u << 1,
    SLANG_FREEZE_SEAL = 1u << 2,
    SLANG_FREEZE_ALL = SLANG_FREEZE_ELABORATE_ALL | SLANG_FREEZE_PREFOLD | SLANG_FREEZE_SEAL,
} slang_freeze_flag;
typedef struct slang_freeze_report {
    uint64_t symbols_elaborated;
    uint64_t expressions_visited;
    uint64_t expressions_folded;
    uint64_t fold_failures;
    uint64_t types_canonicalized;
    uint64_t params_folded;
} slang_freeze_report;
typedef slang_visit (*slang_ast_visitor)(slang_ast node, slang_ast parent, void* user);
typedef enum slang_definition_kind {
    SLANG_DEFINITION_MODULE = 0,
    SLANG_DEFINITION_INTERFACE = 1,
    SLANG_DEFINITION_PROGRAM = 2,
} slang_definition_kind;
typedef struct slang_driver_t* slang_driver;
typedef enum slang_option_kind {
    SLANG_OPTION_FLAG = 0,
    SLANG_OPTION_INT = 1,
    SLANG_OPTION_STRING = 2,
} slang_option_kind;
typedef struct slang_analysis_t* slang_analysis;
typedef enum slang_analysis_flag {
    SLANG_ANALYSIS_CHECK_UNUSED = 1u << 0,
    SLANG_ANALYSIS_FULL_CASE_UNIQUE_PRIORITY = 1u << 1,
    SLANG_ANALYSIS_FULL_CASE_FOUR_STATE = 1u << 2,
    SLANG_ANALYSIS_ALLOW_MULTI_DRIVEN_LOCALS = 1u << 3,
    SLANG_ANALYSIS_ALLOW_DUP_INITIAL_DRIVERS = 1u << 4,
    SLANG_ANALYSIS_CHECK_SHADOW = 1u << 5,
    SLANG_ANALYSIS_INLINE_CONT_ASSIGN_FUNCTION_READS = 1u << 6,
    SLANG_ANALYSIS_ALWAYS_STAR_USES_LSPS = 1u << 7,
    SLANG_ANALYSIS_CONT_ASSIGN_USES_LSPS = 1u << 8,
} slang_analysis_flag;
typedef void (*slang_procedure_listener)(slang_ast procedure, void* user);
typedef void (*slang_scope_listener)(slang_ast scope, void* user);
typedef void (*slang_assertion_listener)(slang_ast containing_symbol, void* user);
typedef struct slang_analysis_listeners {
    slang_procedure_listener on_procedure;
    slang_scope_listener on_scope;
    slang_assertion_listener on_assertion;
    void* user;
} slang_analysis_listeners;
SLANG_C_API slang_analysis slang_analysis_run_listening(slang_compilation comp, uint32_t flags,
                                                        uint32_t threads,
                                                        const slang_analysis_listeners* listeners,
                                                        slang_error* err);
typedef enum slang_driver_kind {
    SLANG_DRIVER_PROCEDURAL = 0,
    SLANG_DRIVER_CONTINUOUS = 1,
    SLANG_DRIVER_OTHER = 2,
} slang_driver_kind;
typedef struct slang_driver_info {
    slang_driver_kind kind;
    uint32_t flags;
    slang_range range;
    slang_ast containing_symbol;
} slang_driver_info;
typedef enum slang_driver_flag {
    SLANG_DRIVER_INPUT_PORT = 1u << 0,
    SLANG_DRIVER_UNIDIRECTIONAL_PORT = 1u << 1,
    SLANG_DRIVER_CLOCK_VAR = 1u << 2,
} slang_driver_flag;
typedef struct slang_dfa_event {
    uint32_t kind;
    slang_ast symbol;
    slang_ast node;
} slang_dfa_event;
typedef enum slang_dfa_event_kind {
    SLANG_DFA_READ = 0,
    SLANG_DFA_WRITE = 1,
    SLANG_DFA_CALL = 2,
} slang_dfa_event_kind;
typedef struct slang_dfa_ctx_t* slang_dfa_ctx;
typedef struct slang_dfa_lattice {
    void* (*top)(void* user);
    void* (*bottom)(void* user);
    void* (*clone)(void* user, const void* state);
    void (*join)(void* user, void* into, const void* other);
    void (*meet)(void* user, void* into, const void* other);
    void (*transfer)(void* user, void* state, const slang_dfa_event* event);
    void (*drop)(void* user, void* state);
    void (*on_case_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
    void (*on_conditional_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
    void (*on_loop_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
} slang_dfa_lattice;