source/capi/CApiInternal.h


struct slang_analysis_t {
    std::unique_ptr<slang::analysis::AnalysisManager> manager;
    slang_compilation comp;
};