rust/sv-lang-sys/src/lib.rs


#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_syntax_sink {
    pub start_node: Option<unsafe extern "C" fn(user: *mut c_void, kind: u32, syntax_struct: u32)>,
    pub trivia:
        Option<unsafe extern "C" fn(user: *mut c_void, kind: u32, text: *const c_char, len: usize)>,
    pub token: Option<
        unsafe extern "C" fn(
            user: *mut c_void,
            kind: u32,
            text: *const c_char,
            len: usize,
            loc: slang_loc,
            flags: u16,
        ),
    >,
    pub absent: Option<unsafe extern "C" fn(user: *mut c_void)>,
    pub start_list: Option<unsafe extern "C" fn(user: *mut c_void, form: slang_member_form)>,
    pub finish_list: Option<unsafe extern "C" fn(user: *mut c_void)>,
    pub finish_node: Option<unsafe extern "C" fn(user: *mut c_void)>,
}

pub type slang_ast_visitor = Option<
    unsafe extern "C" fn(node: slang_ast, parent: slang_ast, user: *mut c_void) -> slang_visit,
>;

// ---- Diagnostics ------------------------------------------------------------

pub type slang_severity = c_uint;
pub const SLANG_SEVERITY_IGNORED: slang_severity = 0;
pub const SLANG_SEVERITY_NOTE: slang_severity = 1;
pub const SLANG_SEVERITY_WARNING: slang_severity = 2;
pub const SLANG_SEVERITY_ERROR: slang_severity = 3;
pub const SLANG_SEVERITY_FATAL: slang_severity = 4;

#[repr(C)]
#[derive(Clone, Copy, Debug, Default)]
pub struct slang_diag {
    pub code: u32,
    pub severity: slang_severity,
    pub location: slang_loc,
    pub note_count: u32,
    pub range_count: u32,
}

#[repr(C)]
#[derive(Clone, Copy, Debug, Default)]
pub struct slang_render_options {
    pub colors: bool,
    pub show_source: bool,
    pub show_include_stack: bool,
    pub absolute_paths: bool,
}

// ---- Compilation ------------------------------------------------------------

pub type slang_freeze_flag = c_uint;
pub const SLANG_FREEZE_ELABORATE_ALL: slang_freeze_flag = 1 << 0;
pub const SLANG_FREEZE_PREFOLD: slang_freeze_flag = 1 << 1;
pub const SLANG_FREEZE_SEAL: slang_freeze_flag = 1 << 2;
pub const SLANG_FREEZE_ALL: slang_freeze_flag =
    SLANG_FREEZE_ELABORATE_ALL | SLANG_FREEZE_PREFOLD | SLANG_FREEZE_SEAL;

#[repr(C)]
#[derive(Clone, Copy, Debug, Default)]
pub struct slang_freeze_report {
    pub symbols_elaborated: u64,
    pub expressions_visited: u64,
    pub expressions_folded: u64,
    pub fold_failures: u64,
    pub types_canonicalized: u64,
    pub params_folded: u64,
}

pub type slang_definition_kind = c_uint;
pub const SLANG_DEFINITION_MODULE: slang_definition_kind = 0;
pub const SLANG_DEFINITION_INTERFACE: slang_definition_kind = 1;
pub const SLANG_DEFINITION_PROGRAM: slang_definition_kind = 2;

// ---- Analysis ---------------------------------------------------------------

#[repr(C)]
pub struct slang_analysis_t {
    _private: [u8; 0],
}
pub type slang_analysis = *mut slang_analysis_t;

/// Analysis listeners (see `slang_analysis_run_listening`); each may be called
/// concurrently from several worker threads.
pub type slang_procedure_listener =
    Option<unsafe extern "C" fn(procedure: slang_ast, user: *mut c_void)>;
pub type slang_scope_listener = Option<unsafe extern "C" fn(scope: slang_ast, user: *mut c_void)>;
pub type slang_assertion_listener =
    Option<unsafe extern "C" fn(containing_symbol: slang_ast, user: *mut c_void)>;

/// A set of analysis listeners; any callback may be `None`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_analysis_listeners {
    pub on_procedure: slang_procedure_listener,
    pub on_scope: slang_scope_listener,
    pub on_assertion: slang_assertion_listener,
    pub user: *mut c_void,
}

pub type slang_analysis_flag = c_uint;
pub const SLANG_ANALYSIS_CHECK_UNUSED: slang_analysis_flag = 1 << 0;
pub const SLANG_ANALYSIS_FULL_CASE_UNIQUE_PRIORITY: slang_analysis_flag = 1 << 1;
pub const SLANG_ANALYSIS_FULL_CASE_FOUR_STATE: slang_analysis_flag = 1 << 2;
pub const SLANG_ANALYSIS_ALLOW_MULTI_DRIVEN_LOCALS: slang_analysis_flag = 1 << 3;
pub const SLANG_ANALYSIS_ALLOW_DUP_INITIAL_DRIVERS: slang_analysis_flag = 1 << 4;
pub const SLANG_ANALYSIS_CHECK_SHADOW: slang_analysis_flag = 1 << 5;
pub const SLANG_ANALYSIS_INLINE_CONT_ASSIGN_FUNCTION_READS: slang_analysis_flag = 1 << 6;
pub const SLANG_ANALYSIS_ALWAYS_STAR_USES_LSPS: slang_analysis_flag = 1 << 7;
pub const SLANG_ANALYSIS_CONT_ASSIGN_USES_LSPS: slang_analysis_flag = 1 << 8;

pub type slang_driver_kind = c_uint;
pub const SLANG_DRIVER_PROCEDURAL: slang_driver_kind = 0;
pub const SLANG_DRIVER_CONTINUOUS: slang_driver_kind = 1;
pub const SLANG_DRIVER_OTHER: slang_driver_kind = 2;

pub type slang_driver_flag = c_uint;
pub const SLANG_DRIVER_INPUT_PORT: slang_driver_flag = 1 << 0;
pub const SLANG_DRIVER_UNIDIRECTIONAL_PORT: slang_driver_flag = 1 << 1;
pub const SLANG_DRIVER_CLOCK_VAR: slang_driver_flag = 1 << 2;

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct slang_driver_info {
    pub kind: slang_driver_kind,
    pub flags: u32,
    pub range: slang_range,
    pub containing_symbol: slang_ast,
}

pub type slang_dfa_event_kind = c_uint;
pub const SLANG_DFA_READ: slang_dfa_event_kind = 0;
pub const SLANG_DFA_WRITE: slang_dfa_event_kind = 1;
pub const SLANG_DFA_CALL: slang_dfa_event_kind = 2;

#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_dfa_event {
    pub kind: u32,
    pub symbol: slang_ast,
    pub node: slang_ast,
}

#[repr(C)]
pub struct slang_dfa_lattice {
    pub top: Option<unsafe extern "C" fn(user: *mut c_void) -> *mut c_void>,
    pub bottom: Option<unsafe extern "C" fn(user: *mut c_void) -> *mut c_void>,
    pub clone: Option<unsafe extern "C" fn(user: *mut c_void, state: *const c_void) -> *mut c_void>,
    pub join:
        Option<unsafe extern "C" fn(user: *mut c_void, into: *mut c_void, other: *const c_void)>,
    pub meet:
        Option<unsafe extern "C" fn(user: *mut c_void, into: *mut c_void, other: *const c_void)>,
    pub transfer: Option<
        unsafe extern "C" fn(user: *mut c_void, state: *mut c_void, event: *const slang_dfa_event),
    >,
    pub drop: Option<unsafe extern "C" fn(user: *mut c_void, state: *mut c_void)>,
}

// ---- Driver -----------------------------------------------------------------

#[repr(C)]
pub struct slang_driver_t {
    _private: [u8; 0],
}
pub type slang_driver = *mut slang_driver_t;

pub type slang_option_kind = c_uint;
pub const SLANG_OPTION_FLAG: slang_option_kind = 0;
pub const SLANG_OPTION_INT: slang_option_kind = 1;
pub const SLANG_OPTION_STRING: slang_option_kind = 2;

// ---- Functions --------------------------------------------------------------

unsafe extern "C" {
    // Status and library information
    pub fn slang_status_name(status: slang_status) -> *const c_char;
    pub fn slang_c_version() -> u32;
    pub fn slang_version_string() -> *const c_char;
    pub fn slang_syntax_model_hash() -> *const c_char;
    pub fn slang_diagnostics_model_hash() -> *const c_char;
    pub fn slang_build_flags() -> u32;

    // Strings
    pub fn slang_str_free(str: slang_str);

    // Kind reflection
    pub fn slang_syntax_kind_count() -> u32;
    pub fn slang_syntax_kind_name(kind: u32) -> slang_str;
    pub fn slang_syntax_kind_struct(kind: u32) -> u32;
    pub fn slang_syntax_struct_count() -> u32;
    pub fn slang_syntax_struct_name(syntax_struct: u32) -> slang_str;
    pub fn slang_syntax_struct_member_count(syntax_struct: u32) -> u32;
    pub fn slang_syntax_member_name(syntax_struct: u32, member: u32) -> slang_str;
    pub fn slang_syntax_member_form(syntax_struct: u32, member: u32) -> slang_member_form;
    pub fn slang_token_kind_count() -> u32;
    pub fn slang_token_kind_name(kind: u32) -> slang_str;
    pub fn slang_trivia_kind_count() -> u32;
    pub fn slang_trivia_kind_name(kind: u32) -> slang_str;
    pub fn slang_ast_kind_name(domain: slang_ast_domain, kind: u32) -> slang_str;
    pub fn slang_ast_kind_count(domain: slang_ast_domain) -> u32;

    // Source manager
    pub fn slang_source_manager_create(err: *mut slang_error) -> slang_source_manager;
    pub fn slang_source_manager_destroy(sm: slang_source_manager);
    pub fn slang_source_manager_add_include_dir(
        sm: slang_source_manager,
        pattern: *const c_char,
        pattern_len: usize,
        system: bool,
        err: *mut slang_error,
    );
    pub fn slang_source_manager_assign_text(
        sm: slang_source_manager,
        path: *const c_char,
        path_len: usize,
        text: *const c_char,
        text_len: usize,
        err: *mut slang_error,
    ) -> slang_buffer_id;
    pub fn slang_source_manager_read_file(
        sm: slang_source_manager,
        path: *const c_char,
        path_len: usize,
        err: *mut slang_error,
    ) -> slang_buffer_id;
    pub fn slang_source_manager_file_name(sm: slang_source_manager, loc: slang_loc) -> slang_str;
    pub fn slang_source_manager_text(
        sm: slang_source_manager,
        buffer: slang_buffer_id,
    ) -> slang_str;
    pub fn slang_source_manager_line(sm: slang_source_manager, loc: slang_loc) -> usize;
    pub fn slang_source_manager_column(sm: slang_source_manager, loc: slang_loc) -> usize;
    pub fn slang_source_manager_is_macro_loc(sm: slang_source_manager, loc: slang_loc) -> bool;
    pub fn slang_source_manager_original_loc(sm: slang_source_manager, loc: slang_loc)
    -> slang_loc;

    // Options
    pub fn slang_options_create(err: *mut slang_error) -> slang_options;
    pub fn slang_options_destroy(options: slang_options);
    pub fn slang_options_set_language_version(
        options: slang_options,
        version: slang_language_version,
    );
    pub fn slang_options_define(
        options: slang_options,
        name: *const c_char,
        name_len: usize,
        value: *const c_char,
        value_len: usize,
        err: *mut slang_error,
    );
    pub fn slang_options_add_top_module(
        options: slang_options,
        name: *const c_char,
        name_len: usize,
        err: *mut slang_error,
    );
    pub fn slang_options_set_compilation_flags(options: slang_options, flags: u32);

    // Syntax trees
    pub fn slang_syntax_tree_from_text(
        sm: slang_source_manager,
        text: *const c_char,
        text_len: usize,
        name: *const c_char,
        name_len: usize,
        path: *const c_char,
        path_len: usize,
        options: slang_options,
        err: *mut slang_error,
    ) -> slang_syntax_tree;
    pub fn slang_syntax_tree_from_file(
        sm: slang_source_manager,
        path: *const c_char,
        path_len: usize,
        options: slang_options,
        err: *mut slang_error,
    ) -> slang_syntax_tree;
    pub fn slang_syntax_tree_from_buffer(
        sm: slang_source_manager,
        buffer: slang_buffer_id,
        options: slang_options,
        err: *mut slang_error,
    ) -> slang_syntax_tree;
    pub fn slang_syntax_tree_retain(tree: slang_syntax_tree) -> slang_syntax_tree;
    pub fn slang_syntax_tree_release(tree: slang_syntax_tree);
    pub fn slang_syntax_tree_root(tree: slang_syntax_tree) -> slang_node;
    pub fn slang_syntax_tree_diagnostics(
        tree: slang_syntax_tree,
        err: *mut slang_error,
    ) -> slang_diagnostics;
    pub fn slang_syntax_tree_source_manager(tree: slang_syntax_tree) -> slang_source_manager;
    pub fn slang_syntax_tree_to_string(tree: slang_syntax_tree, err: *mut slang_error)
    -> slang_str;
